--- a/docs/source/Basic/refs.bib
+++ b/docs/source/Basic/refs.bib
@@ -1,27 +1,22 @@
-    @Proceedings{1993:PatiOMP, 
+@proceedings{1993:PatiOMP, 
     author={Y. C. {Pati} and R. {Rezaiifar} and P. S. {Krishnaprasad}}, 
     booktitle={Proceedings of 27th Asilomar Conference on Signals, Systems and Computers}, 
     title={Orthogonal matching pursuit: recursive function approximation with applications to wavelet decomposition}, 
     year={1993}, 
-    volume={}, 
-    number={}, 
+    volume={1}, 
+    number={10}, 
     pages={40-44 vol.1}, 
-    doi={10.1109/ACSSC.1993.342465}, 
-    ISSN={1058-6393}, 
     month={Nov},
-  }
+}
 
 
-  @article{2003JChPh.118.6720W,
+@article{2003JChPh.118.6720W,
      author = {{Wu}, Y. and {Batista}, V.~S.},
-      title = "{Matching-pursuit for simulations of quantum processes}",
+      title = {Matching-pursuit for simulations of quantum processes},
     journal = {\jcp},
    keywords = {Tunneling traversal time quantum Zeno dynamics, Foundations of quantum mechanics, measurement theory, Fourier analysis, Integral transforms},
-       year = 2003,
-      month = apr,
-     volume = 118,
+       year = {2003},
+      month = {Apr},
+     volume = {118},
       pages = {6720-6724},
-        doi = {10.1063/1.1560636},
-     adsurl = {http://adsabs.harvard.edu/abs/2003JChPh.118.6720W},
-    adsnote = {Provided by the SAO/NASA Astrophysics Data System}
   }
